<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestor de Reservas</string>
    <string name="Usuario">Usuario</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="Noticias">Noticias</string>
    <string name="Password">Contraseña</string>
    <string name="NombreApellido">Nombre Completo</string>
    <string name="RealizarReserva">Realizar Reserva</string>
    <string name="MiPanel">Mi Panel</string>
    <string name="action_settings">Settings</string>
    <string name="GestorReserva">Reservas</string>
    <string name="historial">Historial Reservas</string>
    <string name="Registro">Registrarse</string>
    <string name="newUser">Usuario Nuevo</string>
    <string name="newUsername">Nombre de Usuario</string>
    <string name="email">E-mail</string>
    <string name="ci">Cédula</string>
    <string name="ciguion">*La cédula debe ir sin el guión e incluír el dígito verificador</string>
    <string name="title_activity_ventana_registro">VentanaRegistro</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ventana_ingreso">VentanaIngreso</string>
    <string name="title_activity_reservas">Reservas</string>
    <string name="title_activity_mi_panel">MiPanel</string>

</resources>
